--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.tomoima.realmintentservicesample.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start intent service"
         android:id="@+id/button"
-        android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
         android:onClick="startIntentService"/>
+    <TextView
+        android:id="@+id/update_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button"
+        android:paddingTop="12dp"/>
 </RelativeLayout>
